--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Api\Tools.Api.csproj" />
     </ItemGroup>
 
 </Project>
