--- a/PetanquePlanningApi/PetanquePlanning.Business.Identity.Domain/PetanquePlanning.Business.Identity.Domain.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Identity.Domain/PetanquePlanning.Business.Identity.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Domain\Tools.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
