--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Domain/PetanquePlanning.Business.Location.Domain.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Domain/PetanquePlanning.Business.Location.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Domain\Tools.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
