--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Maps\" />
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+    <ProjectReference Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
+    <ProjectReference Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
