--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Api\Tools.Api.csproj" />
+    <ProjectReference Include="..\PetanquePlanning.Business.Location.Application.Abstractions\PetanquePlanning.Business.Location.Application.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
