Avancement dans la couche core

--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Infrastructure.EntityFramework/PetanquePlanning.Business.Core.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Infrastructure.EntityFramework/PetanquePlanning.Business.Core.Infrastructure.EntityFramework.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+    <ProjectReference Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
+    <ProjectReference Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
+  </ItemGroup>
 
 </Project>
