--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Infrastructure.Abstractions/PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Infrastructure.Abstractions/PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
     <ProjectReference Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
   </ItemGroup>
 
