--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Api\Tools.Api.csproj" />
+      <ProjectReference Include="..\PetanquePlanning.Business.Core.Application.Abstractions\PetanquePlanning.Business.Core.Application.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
