--- a/PetanquePlanningApi/PetanquePlanning.Business.Identity.Application/PetanquePlanning.Business.Identity.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Identity.Application/PetanquePlanning.Business.Identity.Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
       <ProjectReference Include="..\PetanquePlanning.Business.Identity.Application.Abstractions\PetanquePlanning.Business.Identity.Application.Abstractions.csproj" />
       <ProjectReference Include="..\PetanquePlanning.Business.Identity.Infrastructure.Abstractions\PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
