--- a/PetanquePlanningApi/PetanquePlanning.Business.Identity.Presentation/PetanquePlanning.Business.Identity.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Identity.Presentation/PetanquePlanning.Business.Identity.Presentation.csproj
@@ -1,7 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="9.0.0" />
+      <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="5.5.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Api\Tools.Api.csproj" />
+      <ProjectReference Include="..\PetanquePlanning.Business.Identity.Application.Abstractions\PetanquePlanning.Business.Identity.Application.Abstractions.csproj" />
+      <ProjectReference Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
