--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
     <ProjectReference Include="..\PetanquePlanning.Business.Core.Application.Abstractions\PetanquePlanning.Business.Core.Application.Abstractions.csproj" />
     <ProjectReference Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
   </ItemGroup>
