--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.Abstractions/PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.Abstractions/PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
     <ProjectReference Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
   </ItemGroup>
 
