Suppression des interfaces pour les services car inutiles

--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
@@ -6,12 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Core.Application.Abstractions\PetanquePlanning.Business.Core.Application.Abstractions.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Core.Application.DTO\PetanquePlanning.Business.Core.Application.DTO.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
