--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
@@ -10,13 +10,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application.Abstractions\Tools.Application.Abstractions.csproj" />
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Location.Application.Abstractions\PetanquePlanning.Business.Location.Application.Abstractions.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
