--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
@@ -8,8 +8,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Api\Tools.Api.csproj" />
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Location.Application.Abstractions\PetanquePlanning.Business.Location.Application.Abstractions.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Application\PetanquePlanning.Business.Location.Application.csproj" />
     </ItemGroup>
 
 </Project>
