--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
@@ -6,13 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
+        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
-        <ProjectReference
-            Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
+        <ProjectReference Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
