Suppression des Entité dans le ApiController

--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
@@ -8,7 +8,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
     </ItemGroup>
 
 </Project>
