--- a/PetanquePlanningApi/PetanquePlanning.Business.Identity.Application.DTO/PetanquePlanning.Business.Identity.Application.DTO.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Identity.Application.DTO/PetanquePlanning.Business.Identity.Application.DTO.csproj
@@ -12,7 +12,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Http\Tools.Http.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
     </ItemGroup>
 
 </Project>
