--- a/PetanquePlanningApi/PetanquePlanning.Business.Identity.Presentation/PetanquePlanning.Business.Identity.Presentation.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Identity.Presentation/PetanquePlanning.Business.Identity.Presentation.csproj
@@ -15,9 +15,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Application.DTO\PetanquePlanning.Business.Identity.Application.DTO.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Application\PetanquePlanning.Business.Identity.Application.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Application.DTO\PetanquePlanning.Business.Identity.Application.DTO.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Application\PetanquePlanning.Business.Identity.Application.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
     </ItemGroup>
 
 </Project>
