--- a/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
@@ -6,8 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PetanquePlanning.Business.Core.Application.DTO\PetanquePlanning.Business.Core.Application.DTO.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Core.Application.DTO\PetanquePlanning.Business.Core.Application.DTO.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
