--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
@@ -11,8 +11,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Location.Infrastructure.Abstractions\PetanquePlanning.Business.Location.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
