CrCréation d'un générateur TypeScript afin de générer les classes DTOs pour l'appli mobile

--- a/PetanquePlanningApi/PetanquePlanning.Business.Location.Application.DTO/PetanquePlanning.Business.Location.Application.DTO.csproj
+++ b/PetanquePlanningApi/PetanquePlanning.Business.Location.Application.DTO/PetanquePlanning.Business.Location.Application.DTO.csproj
@@ -5,4 +5,8 @@
         <LangVersion>8</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
+    </ItemGroup>
+
 </Project>
