Modification du chemin des tools car modification de la structure des dossiers

--- a/PetanquePlanning.Business.Core.Domain/PetanquePlanning.Business.Core.Domain.csproj
+++ b/PetanquePlanning.Business.Core.Domain/PetanquePlanning.Business.Core.Domain.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Domain\Tools.Domain.csproj" />
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Domain\Tools.Domain.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
     </ItemGroup>
