--- a/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
+++ b/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
     </ItemGroup>
