--- a/PetanquePlanning.Business.Core.Infrastructure.Abstractions/PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj
+++ b/PetanquePlanning.Business.Core.Infrastructure.Abstractions/PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
     </ItemGroup>
