--- a/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
+++ b/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Application.DTO\PetanquePlanning.Business.Core.Application.DTO.csproj" />
         <ProjectReference
