--- a/PetanquePlanning.Business.Identity.Infrastructure.Abstractions/PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj
+++ b/PetanquePlanning.Business.Identity.Infrastructure.Abstractions/PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
     </ItemGroup>
