--- a/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
         <ProjectReference Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
         <ProjectReference Include="..\PetanquePlanning.Business.Identity.Infrastructure.Abstractions\PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
