--- a/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
+++ b/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
         <ProjectReference
