--- a/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanning.Business.Location.Infrastructure.EntityFramework/PetanquePlanning.Business.Location.Infrastructure.EntityFramework.csproj
@@ -7,8 +7,8 @@
 
     <ItemGroup>
         <ProjectReference
-            Include="..\..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
-        <ProjectReference Include="..\..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
+            Include="..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
+        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
         <ProjectReference
