--- a/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
+++ b/PetanquePlanning.Business.Location.Presentation/PetanquePlanning.Business.Location.Presentation.csproj
@@ -6,11 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Location.Application\PetanquePlanning.Business.Location.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Mvc" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
