--- a/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
+++ b/PetanquePlanning.Business.Core.Application.DTO/PetanquePlanning.Business.Core.Application.DTO.csproj
@@ -6,10 +6,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.GeoLocation.Domain\Tools.GeoLocation.Domain.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Application" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
