--- a/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
+++ b/PetanquePlanning.Business.Core.Application/PetanquePlanning.Business.Core.Application.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="9.0.0" />
+        <PackageReference Include="DimitriSauvageTools.Application" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
