--- a/PetanquePlanning.Business.Core.Infrastructure.EntityFramework/PetanquePlanning.Business.Core.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanning.Business.Core.Infrastructure.EntityFramework/PetanquePlanning.Business.Core.Infrastructure.EntityFramework.csproj
@@ -7,12 +7,13 @@
 
     <ItemGroup>
         <ProjectReference
-            Include="..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
-        <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Domain\PetanquePlanning.Business.Core.Domain.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Infrastructure.Abstractions\PetanquePlanning.Business.Core.Infrastructure.Abstractions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Infrastructure.EntityFramework" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
