--- a/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
+++ b/PetanquePlanning.Business.Core.Presentation/PetanquePlanning.Business.Core.Presentation.csproj
@@ -6,11 +6,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Mvc\Tools.Mvc.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Application.DTO\PetanquePlanning.Business.Core.Application.DTO.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Core.Application\PetanquePlanning.Business.Core.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Mvc" Version="1.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
     </ItemGroup>
 
 </Project>
