--- a/PetanquePlanning.Business.Identity.Application/PetanquePlanning.Business.Identity.Application.csproj
+++ b/PetanquePlanning.Business.Identity.Application/PetanquePlanning.Business.Identity.Application.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="9.0.0" />
+        <PackageReference Include="DimitriSauvageTools.Application" Version="1.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
     </ItemGroup>
