--- a/PetanquePlanning.Business.Identity.Domain/PetanquePlanning.Business.Identity.Domain.csproj
+++ b/PetanquePlanning.Business.Identity.Domain/PetanquePlanning.Business.Identity.Domain.csproj
@@ -6,12 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools" Version="1.0.1" />
+        <PackageReference Include="DimitriSauvageTools.Domain" Version="1.0.0" />
         <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Domain\Tools.Domain.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Location.Domain\PetanquePlanning.Business.Location.Domain.csproj" />
     </ItemGroup>
 
 </Project>
