--- a/PetanquePlanning.Business.Identity.Infrastructure.Abstractions/PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj
+++ b/PetanquePlanning.Business.Identity.Infrastructure.Abstractions/PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj
@@ -7,9 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Infrastructure" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
