--- a/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework.csproj
+++ b/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework/PetanquePlanning.Business.Identity.Infrastructure.EntityFramework.csproj
@@ -6,10 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure.EntityFramework\Tools.Infrastructure.EntityFramework.csproj" />
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Infrastructure\Tools.Infrastructure.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
-        <ProjectReference Include="..\PetanquePlanning.Business.Identity.Infrastructure.Abstractions\PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Domain\PetanquePlanning.Business.Identity.Domain.csproj" />
+        <ProjectReference
+            Include="..\PetanquePlanning.Business.Identity.Infrastructure.Abstractions\PetanquePlanning.Business.Identity.Infrastructure.Abstractions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DimitriSauvageTools.Infrastructure.EntityFramework" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
