--- a/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
+++ b/PetanquePlanning.Business.Location.Application/PetanquePlanning.Business.Location.Application.csproj
@@ -7,10 +7,10 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="9.0.0" />
+        <PackageReference Include="DimitriSauvageTools.Application" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\CSharp-Tools\Tools.Application\Tools.Application.csproj" />
         <ProjectReference
             Include="..\PetanquePlanning.Business.Location.Application.DTO\PetanquePlanning.Business.Location.Application.DTO.csproj" />
         <ProjectReference
